--- a/client/app/donor/donor.html
+++ b/client/app/donor/donor.html
@@ -1,20 +1,35 @@
 <!-- <div ng-include="'app/components/navbar/navbar.html'"></div>
  -->
 <div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <div class="list-admin-users">
+ <div class="row">
+          <button class="btn btn-sm btn-success"
+             ng-click="addItem(this.user)"
+             data-template-url="app/donor/new_item.html"
+             data-animation="am-fade-and-scale"
+             bs-modal="showModal">Add Item
+          </button><br></br><br></br>
+	</div>
+   <div class="row">
+        <div class="col-md-6">
+            <div class="list-group">
                 <ul>
-                    <h2>All Users</h2>
-                    <li ng-repeat="user in users">
-                        <p>{{ user.name }} - {{ user.email }}
-                            <button ng-click="deleteUser(user)" class="btn btn-sm btn-warning" data-title="DELETE User  -  Cannot be Undone" bs-tooltip>DELETE</button>
+                    <li class="list-group-item" ng-repeat="list in lists">
+                        <p>Item Name: {{ list.name }}</br> Description: {{ list.detail }}</br> Quantity: {{ list.quantity}}</br>
+                            <button ng-click="deleteItem(list)" class="btn btn-sm btn-warning" data-title="DELETE Item  -  Cannot be Undone" bs-tooltip>DELETE</button>
                         </p>
                     </li>
                 </ul>
             </div>
         </div>
-
+<div class="row">
+          <button class="btn btn-danger"
+             ng-click="getReceivers(this.user)"
+             data-template-url="app/donor/filter_receivers.html"
+             data-animation="am-fade-and-scale"
+             bs-modal="showModal">Find Receivers
+          </button><br></br><br></br>
+	</div>		
+  <!--
         <div class="col-md-8">
             <table st-table="users" class="table table-striped">
                 <thead>
@@ -22,7 +37,7 @@
                         <th>first name</th>
                         <th>last name</th>
                         <th>birth date</th>
-                        <th>balance</th>
+                        <th>balace</th>
                         <th>email</th>
                     </tr>
                 </thead>
@@ -30,10 +45,10 @@
                     <tr ng-repeat="row in users">
                         <td>{{row.name | uppercase}}</td>
                         <td>{{row.email}}</td>
-                        <!--
+
 		<td>{{row.birthDate | date}}</td>
 		<td>{{row.balance | currency}}</td>
--->
+
                         <td>
                             <button class="btn btn-sm" popover-placement="top" popover="{{row.email}}" type="button">
                                 <i class="glyphicon glyphicon-eye-open"></i>
@@ -48,5 +63,5 @@
                 </tbody>
             </table>
         </div>
-    </div>
+    </div> -->
 </div>
