Updated the codes for Donor

--- a/client/app/donor/filter_receivers.html
+++ b/client/app/donor/filter_receivers.html
@@ -43,9 +43,7 @@
                       ng-show="deleteBtn">DELETE LOOK</button>
             </div>
           </div>-->
-
-
-       <div class="col-md-6" id="alertContainer"></div> 
+       <div class="col-md-6" id="alertContainer2"></div> 
         </div>
       <div class="modal-footer">
         <button type="button"
@@ -53,7 +51,7 @@
                     ng-click="$hide()">Close</button>
         <button type="button"
           class="btn btn-primary btn-md pull-left"
-          ng-click="pushItem(this.list)">Save Item</button>
+          ng-click="searchReceivers()">Search Receivers</button>
       </div>
     </div>
   </div>
