--- a/client/app/donor/filter_receivers.html
+++ b/client/app/donor/filter_receivers.html
@@ -10,6 +10,7 @@
     <div class="modal-body" ng-show="content">
       <div class="edit-look-title">
        <h2>Filter Receivers Search</h2>
+	   <h>***Under Development***</h6>
       </div>
 
       <div class="form-group">
@@ -21,7 +22,8 @@
 		 <label for="description">Distance</label>
 		   <input type="number"
                   class="form-control title-input"
-                  ng-model="receiverDistance" /></br>			  
+                  ng-model="receiverDistance" /></br>		
+<div class="col-md-6" id="alertContainer2"></div>				  
       </div>
 <!-- 
       <div class="form-group">
@@ -43,7 +45,7 @@
                       ng-show="deleteBtn">DELETE LOOK</button>
             </div>
           </div>-->
-       <div class="col-md-6" id="alertContainer2"></div> 
+        
         </div>
       <div class="modal-footer">
         <button type="button"
