Updated the code

--- a/client/app/donor/filter_receivers.html
+++ b/client/app/donor/filter_receivers.html
@@ -10,7 +10,7 @@
     <div class="modal-body" ng-show="content">
       <div class="edit-look-title">
        <h2>Filter Receivers Search</h2>
-	   <h>***Under Development***</h6>
+	   <h6>Under Development***</h6>
       </div>
 
       <div class="form-group">
