--- a/client/app/donor/filter_receivers.html
+++ b/client/app/donor/filter_receivers.html
@@ -15,14 +15,14 @@
 
       <div class="form-group">
 	  <label for="receiversFilterType">Filter Type</label>
-        		 <button type="button" class="btn btn-default" ng-model="receiversFilterType" data-html="1" data-multiple="1" data-animation="am-flip-x" bs-options="itemFilter.value as itemFilter.label for itemFilter in itemFilters" bs-select>
+        		 <button type="button" class="btn btn-default" ng-model="filter.receiversFilterType" data-html="1" data-multiple="1" data-animation="am-flip-x" bs-options="itemFilter.value as itemFilter.label for itemFilter in itemFilters" bs-select>
   Action <span class="caret"></span>
 </button>
 </br>
 		 <label for="distance">Distance</label>
 		   <input type="number"
                   class="form-control title-input"
-                  ng-model="receiverDistance" /></br>		
+                  ng-model="filter.receiverDistance" /></br>		
 <div class="col-md-6" id="alertContainer2"></div>				  
       </div>
 <!-- 
@@ -53,7 +53,7 @@
                     ng-click="$hide()">Close</button>
         <button type="button"
           class="btn btn-primary btn-md pull-left"
-          ng-click="adminAPI.getReceivers()">Search Receivers</button>
+          ng-click="getReceivers(filter)">Search Receivers</button>
       </div>
     </div>
   </div>
