--- a/client/app/donor/donor.html
+++ b/client/app/donor/donor.html
@@ -3,7 +3,6 @@
 <div class="container">
  <div class="row">
           <button class="btn btn-sm btn-success"
-             ng-click="addItem(this.user)"
              data-template-url="app/donor/new_item.html"
              data-animation="am-fade-and-scale"
              bs-modal="showModal">Add Item
@@ -24,22 +23,24 @@
 <!-- 	</div>
 <div class="row"> -->
           <button class="btn btn-danger"
-             ng-click="getReceivers(this.user)"
              data-template-url="app/donor/filter_receivers.html"
              data-animation="am-fade-and-scale"
              bs-modal="showModal">Find Receivers
-          </button><br></br><br></br>
+          </button><br> </br><br> </br>
               <div class="col-md-6">
             <div class="list-group">
                 <ul>
                     <li class="list-group-item" ng-repeat="receiver in closestReceivers">
-                        <p>Email: {{receiver.email}}</br>Ein : {{ receiver.ein }}</br> Address: {{ receiver.address }}</br>
+                        <p>Email: {{receiver.email}}</br>Ein : {{receiver.name}}</br> Address: {{receiver.address}}</br>
 <!--                             <button ng-click="deleteItem(list)" class="btn btn-sm btn-warning" data-title="DELETE Item  -  Cannot be Undone" bs-tooltip>DELETE</button> -->
                         </p>
                     </li>
                 </ul>
             </div>
-        </div>		  
+        </div>
+       <button class="btn btn-primary"
+               ng-click="submitItems(this)">Submit
+       </button><br> </br> <br> </br>
 </div>		
   <!--
         <div class="col-md-8">
