--- a/client/app/donor/donor.html
+++ b/client/app/donor/donor.html
@@ -1,6 +1,9 @@
 <!-- <div ng-include="'app/components/navbar/navbar.html'"></div>
  -->
 <div class="container">
+    <div class="row">
+        <div class="col-md-12" id="alertContainer3" ng-show="notification" ></div>
+    </div>
  <div class="row">
           <button class="btn btn-sm btn-success"
              data-template-url="app/donor/new_item.html"
