--- a/client/app/donor/submit_transaction.html
+++ b/client/app/donor/submit_transaction.html
@@ -43,7 +43,7 @@
         </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" ng-click="$hide()">Close</button>
-        <button type="button" class="btn btn-primary btn-md pull-left" ng-click="submitItems(this.transaction)">Submit</button>
+        <button type="button" class="btn btn-primary btn-md pull-left" ng-click="submitItems(this.transaction);$hide()">Submit</button>
       </div>
     </div>
   </div>
