--- a/client/app/donor/donor.html
+++ b/client/app/donor/donor.html
@@ -34,7 +34,7 @@
             <div class="list-group">
                 <ul>
                     <li class="list-group-item" ng-repeat="receiver in closestReceivers">
-                        <p>Email: {{receiver.email}}</br>Ein : {{receiver.name}}</br> Address: {{receiver.address}}</br>
+                        <p>Email: {{receiver.email}}</br>Name : {{receiver.name}}</br> Address: {{receiver.address}}</br> 
 <!--                             <button ng-click="deleteItem(list)" class="btn btn-sm btn-warning" data-title="DELETE Item  -  Cannot be Undone" bs-tooltip>DELETE</button> -->
                         </p>
                     </li>
