--- a/client/app/admin/update_user.html
+++ b/client/app/admin/update_user.html
@@ -2,54 +2,53 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header" ng-show="title">
-        <button type="button"
-                    class="close"
-                    ng-click="$hide()">&times;</button>
+        <button type="button" class="close" ng-click="$hide()">&times;</button>
       </div>
 
     <div class="modal-body" ng-show="content">
-      <div class="edit-look-title">
-       <h2>Edit Look</h2>
+      <div class="edit-user-title">
+       <h3>Activate/Deactivate User</h3>
       </div>
 
       <div class="form-group">
-        <label for="title">Title</label>
-          <input type="text"
-                  class="form-control title-input"
-                  placeholder="{{ user.name }}"
-                  ng-model="user.name" />
-      </div>
+        <div><label for="role">Type: </label>{{ user.role }}</div>
+        <div><label for="ein">Employer Identification Number (EIN): </label>{{ user.ein }}</div>
+        <div><label for="name">Name: </label>{{ user.name }}</div>
+        <div><label for="email">Email: </label>{{ user.email }}</div>
+        <div><label for="email">Registered Date: </label>{{ user.registeredDate }}</div>
+        <div><label for="address">Address: </label>{{ user.address }}</div>
+        <div><label for="address">Company Details: </label><br>
+          Company Name: {{ user.companyInfo.companyName}}<br>
+          Company Website: {{ user.companyInfo.companyWebsite}}<br>
+          Admin Name: {{ user.companyInfo.companyAdminName}}<br>
+          Admin Email: {{ user.companyInfo.companyEmail}}<br>
+          Admin Phone: {{ user.companyInfo.companyPhoneNumber}}
+         </div>
+        <div><label for="foodRecovery">Food Recovery Info: </label><br>
+          Name: {{ user.foodRecoveryInfo.foodRecoveryContactName}}<br>
+          Phone: {{ user.foodRecoveryInfo.foodRecoveryContactPhone}}<br>
+          Email: {{ user.foodRecoveryInfo.foodRecoveryContactEmail}}
+        </div>
+        <div><label for="status">Activation Status: </label>{{ user.status }}</div>
+        <div><label for="status">Modify Activation Status: </label>
+          <button type="button" class="btn btn-default" ng-model="update.status" data-html="1" data-animation="am-flip-x" bs-options="activationStatus.value as activationStatus.label for activationStatus in activationStatuses" bs-select>Action <span class="caret"></span></button>
+        </div>
 
-      <div class="form-group">
-        <div class="row listing-description-row">
-        <label for="description"
-                  class="col-xs-12">Description</label>
-          <textarea type="text"
-                  class="form-control description-textarea"
-                  placeholder="{{ user.email }}"
-                  ng-model="user.email"/>
-            </div>
-          </div>
-
-      <div class="form-group">
-        <div class="row listing-delete-btn">
-          <button ng-click="editLook(look)"
-                      class="btn btn-warning btn-lg"
-                      ng-show="deleteBtn">Activate/Deactivate</button>
-            </div>
-          </div>
+      <!--<div class="form-group">-->
+        <!--<div class="row listing-delete-btn">-->
+          <!--<button ng-click="editLook(look)"-->
+                      <!--class="btn btn-warning btn-lg"-->
+                      <!--ng-show="deleteBtn">Activate/Deactivate</button>-->
+            <!--</div>-->
+          <!--</div>-->
 
 
        <div class="col-md-6" id="alertContainer"></div>
 
         </div>
       <div class="modal-footer">
-        <button type="button"
-                    class="btn btn-default pull-left"
-                    ng-click="$hide()">Close</button>
-        <button type="button"
-          class="btn btn-primary btn-md pull-left"
-          ng-click="saveLook()">Save Edits</button>
+        <button type="button" class="btn btn-default pull-left"  ng-click="$hide()">Close</button>
+        <button type="button" class="btn btn-primary btn-md pull-left" ng-click="updateStatus()">Update</button>
       </div>
     </div>
   </div>
