--- a/client/app/donor/submit_transaction.html
+++ b/client/app/donor/submit_transaction.html
@@ -17,6 +17,8 @@
        <label>Mobile Number</label>
        <input type="number" class="form-control title-input" placeholder="4086691234" ng-minlength="10"
               ng-class="{'red':form-group.input.$invalid}"    ng-maxlength="10"  ng-model="transaction.phone" /></br>
+       <label>Note   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+       <input type="text" class="form-control title-input" ng-model="transaction.note" placeholder="Food items for 30 people"/></br>
         <div class="col-md-6" id="alertContainer2"></div>
       </div>
 <!-- 
