--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-moment/angular-moment.min.js"></script>
 	  <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-	  <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+	  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaeZTp9cuiYuRLcaC6Vnng_JxhW7Rhu-8&libraries=places"></script>
 	  <script src="bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
 	  <script src="bower_components/api-check/dist/api-check.min.js"></script>
 	  <script src="bower_components/angular-formly/dist/formly.min.js"></script>
